# ocaml-playground

./: README.md
args-main-fun/: run.sh
args-main-fun/src/: main.ml
arrays-fun/src/: main.ml
basics-fun/: main.ml  run.sh
booleans-fun/src/: main.ml
functions-fun/src/: main.ml
gadts-fun/project/: dune-project
http_async_fun/project/: dune-project  project.opam
lwt-concurrent-fun/project/: dune-project
mutual-recursion-fun/project/: run.sh
opam-project/project_name/: build.sh  dune-project
records-fun/: run.sh
records-fun/src/: main.ml
recursion-fun/src/: main.ml
strings-fun/src/: main.ml
