(lang dune 3.7)

(name project)

(generate_opam_files true)

(source
 (github diegopacheco/ocaml-playground))

(authors "Diego Pacheco")

(maintainers "Diego Pacheco")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name project)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune base http_async)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
